--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,23 +6,23 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_menu_home"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_hotels"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_menu_hotel"
             android:title="Hotels" />
         <item
             android:id="@+id/nav_restaurants"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_menu_restaurant"
             android:title="Restaurants" />
         <item
             android:id="@+id/nav_attractions"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_menu_attractions"
             android:title="Attractions" />
         <item
             android:id="@+id/nav_shopping"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_menu_shopping"
             android:title="Shopping" />
     </group>
 </menu>
