--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,8 +2,51 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="nav_header_vertical_spacing">8dp</dimen>
-    <dimen name="nav_header_height">176dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+
+    <dimen name="home_title_marginTop">16dp</dimen>
+    <dimen name="home_title_textSize">30sp</dimen>
+    <dimen name="home_image_width">300dp</dimen>
+    <dimen name="home_image_height">200dp</dimen>
+    <dimen name="home_image_marginTop">24dp</dimen>
+
+    <dimen name="home_about_width">0dp</dimen>
+    <dimen name="home_about_marginTop">24dp</dimen>
+    <dimen name="home_about_margin_32">32dp</dimen>
+    <dimen name="home_about_padding_bottom">32dp</dimen>
+    <dimen name="home_about_text_size">16sp</dimen>
+
+    <dimen name="fragment_list_margin">8dp</dimen>
+
+    <dimen name="fragment_list_horizontal_scroll_margin">16dp</dimen>
+
+    <dimen name="fragment_list_item_image_width">60dp</dimen>
+    <dimen name="fragment_list_item_image_height">60dp</dimen>
+    <dimen name="fragment_list_item_image_marginTop">16dp</dimen>
+
+    <dimen name="fragment_list_item_name_marginTop">16dp</dimen>
+    <dimen name="fragment_list_item_name_margin">8dp</dimen>
+    <dimen name="fragment_list_item_name_text_size">16sp</dimen>
+
+    <dimen name="fragment_list_item_address_text_size">14sp</dimen>
+
+    <dimen name="fragment_list_item_phone_marginBottom">8dp</dimen>
+    <dimen name="fragment_list_item_phone_text_size">14sp</dimen>
+
+    <dimen name="fragment_list_item_description_marginBottom">8dp</dimen>
+    <dimen name="fragment_list_item_description_text_size">12sp</dimen>
+
+    <dimen name="fragment_list_item_card_margin">8dp</dimen>
+
+    <dimen name="fragment_list_item_card_image_height">150dp</dimen>
+
+    <dimen name="fragment_list_item_card_info_container_padding">16dp</dimen>
+
+    <dimen name="fragment_list_item_card_address_marginTop">8dp</dimen>
+
+    <dimen name="fragment_list_item_card_phone_marginTop">4dp</dimen>
+
+    <dimen name="fragment_list_item_card_description_marginTop">16dp</dimen>
+    <dimen name="fragment_list_item_card_description_textSize">12sp</dimen>
+
 </resources>
